--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-stringify": "^5.6.0",
+    "got": "^11.8.1",
+    "jsdom": "^16.4.0",
     "lodash": "4.17.15"
   },
   "devDependencies": {
